register SERVER-CONFIG as service

--- a/spring-cloud-service-consumer/src/main/resources/bootstrap.properties
+++ b/spring-cloud-service-consumer/src/main/resources/bootstrap.properties
@@ -1,4 +1,6 @@
 spring.application.name=demo-service-consumer
 spring.cloud.config.profile=dev
 spring.cloud.config.label=master
-spring.cloud.config.uri=http://localhost:18001/
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.serviceId=config-server
+eureka.client.serviceUrl.defaultZone=http://localhost:18001/eureka/
