--- a/spring-cloud-config/src/main/resources/application.properties
+++ b/spring-cloud-config/src/main/resources/application.properties
@@ -1,5 +1,6 @@
+server.port=18011
 spring.application.name=config-server
-server.port=18001
+eureka.client.serviceUrl.defaultZone=http://localhost:18001/eureka/
 
 # search from local
 spring.profiles.active=native
