--- a/spring-cloud-config/src/main/resources/application.properties
+++ b/spring-cloud-config/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.application.name=config-server
 eureka.client.serviceUrl.defaultZone=http://localhost:18001/eureka/
 
 # search from local
-spring.profiles.active=native
+#spring.profiles.active=native
 
 # search from git repo
-#spring.cloud.config.server.git.uri=http://git.oschina.net/didispace/SpringBoot-Learning/
-#spring.cloud.config.server.git.searchPaths=Chapter9-1-4/config-repo
-#spring.cloud.config.server.git.username=username
-#spring.cloud.config.server.git.password=password
+spring.cloud.config.server.git.uri=https://github.com/noisyle/spring-cloud-demo.git
+spring.cloud.config.server.git.searchPaths=spring-cloud-config/src/main/resources
+spring.cloud.config.server.git.username=username
+spring.cloud.config.server.git.password=password
