--- a/spring-cloud-config/src/main/resources/application.properties
+++ b/spring-cloud-config/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port=18011
 spring.application.name=config-server
-eureka.client.serviceUrl.defaultZone=http://localhost:18001/eureka/
+eureka.client.serviceUrl.defaultZone=http://peer1:18001/eureka/,http://peer2:18002/eureka/,http://peer3:18003/eureka/
 
 # search from local
-#spring.profiles.active=native
+spring.profiles.active=native
 
 # search from git repo
-spring.cloud.config.server.git.uri=https://github.com/noisyle/spring-cloud-demo.git
-spring.cloud.config.server.git.searchPaths=spring-cloud-config/src/main/resources
-spring.cloud.config.server.git.username=username
-spring.cloud.config.server.git.password=password
+#spring.cloud.config.server.git.uri=https://github.com/noisyle/spring-cloud-demo.git
+#spring.cloud.config.server.git.searchPaths=spring-cloud-config/src/main/resources
+#spring.cloud.config.server.git.username=username
+#spring.cloud.config.server.git.password=password
