--- a/spring-cloud-eureka/src/main/resources/application-peer1.yml
+++ b/spring-cloud-eureka/src/main/resources/application-peer1.yml
@@ -5,4 +5,4 @@ eureka:
     hostname: peer1
   client:
     serviceUrl:
-      defaultZone: http://peer2:18002/eureka/,http://peer3:18003/eureka/
+      defaultZone: http://peer2:18002/eureka/
