--- a/spring-cloud-zuul/src/main/resources/application.properties
+++ b/spring-cloud-zuul/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=18021
 spring.application.name=zuul-server
-eureka.client.serviceUrl.defaultZone=http://peer1:18001/eureka/,http://peer2:18002/eureka/,http://peer3:18003/eureka/
+eureka.client.serviceUrl.defaultZone=http://peer1:18001/eureka/,http://peer2:18002/eureka/
 
 zuul.routes.demo-service.path=/demo-service/**
 zuul.routes.demo-service.serviceId=demo-service-consumer
