--- a/spring-cloud-config/src/main/resources/application.properties
+++ b/spring-cloud-config/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=18011
 spring.application.name=config-server
-eureka.client.serviceUrl.defaultZone=http://peer1:18001/eureka/,http://peer2:18002/eureka/,http://peer3:18003/eureka/
+eureka.client.serviceUrl.defaultZone=http://peer1:18001/eureka/,http://peer2:18002/eureka/
 
 # search from local
 #spring.profiles.active=native
@@ -8,5 +8,5 @@ eureka.client.serviceUrl.defaultZone=http://peer1:18001/eureka/,http://peer2:180
 # search from git repo
 spring.cloud.config.server.git.uri=https://github.com/noisyle/spring-cloud-demo.git
 spring.cloud.config.server.git.searchPaths=config-repo
-spring.cloud.config.server.git.username=username
-spring.cloud.config.server.git.password=password
+#spring.cloud.config.server.git.username=username
+#spring.cloud.config.server.git.password=password
