--- a/spring-cloud-eureka/src/main/resources/application-peer2.yml
+++ b/spring-cloud-eureka/src/main/resources/application-peer2.yml
@@ -5,4 +5,4 @@ eureka:
     hostname: peer2
   client:
     serviceUrl:
-      defaultZone: http://peer1:18001/eureka/,http://peer3:18003/eureka/
+      defaultZone: http://peer1:18001/eureka/
