--- a/spring-cloud-service-provider/src/main/resources/bootstrap.properties
+++ b/spring-cloud-service-provider/src/main/resources/bootstrap.properties
@@ -3,4 +3,4 @@ spring.cloud.config.profile=dev
 spring.cloud.config.label=master
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config-server
-eureka.client.serviceUrl.defaultZone=http://peer1:18001/eureka/,http://peer2:18002/eureka/,http://peer3:18003/eureka/
+eureka.client.serviceUrl.defaultZone=http://peer1:18001/eureka/,http://peer2:18002/eureka/
