--- a/spring-cloud-service-provider/src/main/resources/application.properties
+++ b/spring-cloud-service-provider/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=18031
+management.endpoints.health.show-details=ALWAYS
+management.endpoints.web.exposure.include=*
+management.endpoints.web.cors.allowed-origins=*
+management.endpoints.web.cors.allowed-methods=*
+management.security.enabled=false
