--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <module>spring-cloud-service-provider</module>
     <module>spring-cloud-service-consumer</module>
     <module>spring-cloud-turbine</module>
+    <module>spring-boot-admin</module>
   </modules>
 
   <dependencyManagement>
