--- a/spring-cloud-service-consumer/src/main/resources/application.properties
+++ b/spring-cloud-service-consumer/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=18041
+management.endpoints.health.show-details=ALWAYS
 management.endpoints.web.exposure.include=*
 management.endpoints.web.cors.allowed-origins=*
 management.endpoints.web.cors.allowed-methods=*
+management.security.enabled=false
