change project name

--- a/spring-cloud-eureka/src/main/resources/application.yml
+++ b/spring-cloud-eureka/src/main/resources/application.yml
@@ -1,3 +1,16 @@
 spring:
   application:
     name: eureka-server
+
+management:
+  endpoints:
+    health:
+      show-details: ALWAYS
+  web:
+    exposure:
+      include: "*"
+    cors:
+      allowed-origins: "*"
+      allowed-methods: "*"
+  security:
+    enabled: false
